# guardian

./: .gitignore  .ocamlformat  CHANGELOG.md  LICENSE  Makefile  README.md  dune  dune-project  guardian.opam  guardian.opam.locked  index.html  index.mld  ocaml_authorize.opam
.devcontainer/: .env.example  Dockerfile  README.md  devcontainer-lock.json  devcontainer.json  docker-compose.yml  postCreate.sh
.github/workflows/: ci.yml
backend/: caqti_encoders.ml  database_pools.ml  database_pools.mli  database_pools_sig.ml  dune  guardian_backend.ml  mariadb_backend.ml  mariadb_utils.ml  migrations.ml  sqlite3_backend.ml
backends/: database_pools.ml  dune  mariadb_backend.ml  sqlite3_backend.ml
guardian/: index.html
guardian/Guardian/: index.html
guardian/Guardian/Action/: index.html
guardian/Guardian/Contract/: index.html
guardian/Guardian/Contract/Uuid/: index.html
guardian/Guardian/Contract/Uuid/Actor/: index.html
guardian/Guardian/Contract/Uuid/module-type-Sig/: index.html
guardian/Guardian/Make/: index.html
guardian/Guardian/Make/Action/: index.html
guardian/Guardian/Make/Actor/: index.html
guardian/Guardian/Make/ActorPermission/: index.html
guardian/Guardian/Make/ActorRole/: index.html
guardian/Guardian/Make/ActorSpec/: index.html
guardian/Guardian/Make/Authorizer/: index.html
guardian/Guardian/Make/Dependency/: index.html
guardian/Guardian/Make/Dependency/Key/: index.html
guardian/Guardian/Make/Dependency/Map/: index.html
guardian/Guardian/Make/Effect/: index.html
guardian/Guardian/Make/EffectSet/: index.html
guardian/Guardian/Make/MakePersistence/: index.html
guardian/Guardian/Make/MakePersistence/Actor/: index.html
guardian/Guardian/Make/MakePersistence/ActorPermission/: index.html
guardian/Guardian/Make/MakePersistence/ActorRole/: index.html
guardian/Guardian/Make/MakePersistence/Dependency/: index.html
guardian/Guardian/Make/MakePersistence/PermissionOnTarget/: index.html
guardian/Guardian/Make/MakePersistence/Relation/: index.html
guardian/Guardian/Make/MakePersistence/Repo/: index.html
guardian/Guardian/Make/MakePersistence/RoleAssignment/: index.html
guardian/Guardian/Make/MakePersistence/RolePermission/: index.html
guardian/Guardian/Make/MakePersistence/Rule/: index.html
guardian/Guardian/Make/MakePersistence/argument-1-Backend/: index.html
guardian/Guardian/Make/ParentTyp/: index.html
guardian/Guardian/Make/Permission/: index.html
guardian/Guardian/Make/PermissionOnTarget/: index.html
guardian/Guardian/Make/Relation/: index.html
guardian/Guardian/Make/Relation/Query/: index.html
guardian/Guardian/Make/RoleAssignment/: index.html
guardian/Guardian/Make/RolePermission/: index.html
guardian/Guardian/Make/RoleSet/: index.html
guardian/Guardian/Make/Rule/: index.html
guardian/Guardian/Make/Rule/Core/: index.html
guardian/Guardian/Make/Rule/Set/: index.html
guardian/Guardian/Make/TargetEntity/: index.html
guardian/Guardian/Make/TargetSpec/: index.html
guardian/Guardian/Make/Uuid/: index.html
guardian/Guardian/Make/Uuid/Actor/: index.html
guardian/Guardian/Make/Uuid/module-type-Sig/: index.html
guardian/Guardian/Make/ValidationSet/: index.html
guardian/Guardian/Make/argument-1-ActorModel/: index.html
guardian/Guardian/Make/argument-1-ActorRoles/: index.html
guardian/Guardian/Make/argument-2-Role/: index.html
guardian/Guardian/Make/argument-2-TargetRoles/: index.html
guardian/Guardian/Make/argument-3-TargetModel/: index.html
guardian/Guardian/Make/module-type-ActorSig/: index.html
guardian/Guardian/Make/module-type-PersistenceSig/: index.html
guardian/Guardian/Make/module-type-PersistenceSig/Actor/: index.html
guardian/Guardian/Make/module-type-PersistenceSig/ActorPermission/: index.html
guardian/Guardian/Make/module-type-PersistenceSig/ActorRole/: index.html
guardian/Guardian/Make/module-type-PersistenceSig/Dependency/: index.html
guardian/Guardian/Make/module-type-PersistenceSig/PermissionOnTarget/: index.html
guardian/Guardian/Make/module-type-PersistenceSig/Relation/: index.html
guardian/Guardian/Make/module-type-PersistenceSig/Repo/: index.html
guardian/Guardian/Make/module-type-PersistenceSig/RoleAssignment/: index.html
guardian/Guardian/Make/module-type-PersistenceSig/RolePermission/: index.html
guardian/Guardian/Make/module-type-PersistenceSig/Rule/: index.html
guardian/Guardian/Make/module-type-TargetSig/: index.html
guardian/Guardian/Utils/: index.html
guardian/Guardian/Utils/Dynparam/: index.html
guardian/Guardian/Uuid/: index.html
guardian/Guardian/Uuid/Actor/: index.html
guardian/Guardian/Uuid/module-type-Sig/: index.html
guardian/Guardian/module-type-RoleSig/: index.html
guardian/Guardian_backend/: index.html
guardian/Guardian_backend/MariaDb/: index.html
guardian/Guardian_backend/MariaDb/Make/: index.html
guardian/Guardian_backend/MariaDb/Make/Action/: index.html
guardian/Guardian_backend/MariaDb/Make/Actor/: index.html
guardian/Guardian_backend/MariaDb/Make/ActorPermission/: index.html
guardian/Guardian_backend/MariaDb/Make/ActorRole/: index.html
guardian/Guardian_backend/MariaDb/Make/BaseType/: index.html
guardian/Guardian_backend/MariaDb/Make/DBCache/: index.html
guardian/Guardian_backend/Pools/: index.html
guardian/Guardian_backend/Pools/DefaultConfig/: index.html
guardian/Guardian_backend/Pools/Make/: index.html
guardian/Guardian_backend/Pools/module-type-ConfigSig/: index.html
guardian/Guardian_backend/Pools/module-type-Sig/: index.html
lib/: RoleSet.ml  action.ml  authorizable.ml  authorizer.ml  dune  entity.ml  guardian.ml  guardian.mli  guardian_entity.ml  logger.ml  ocaml_authorize.ml  permission.ml  permission.mli  persistence.ml  role.ml  role_set.ml  sig.ml  spec.ml  utils.ml  utils.mli  uuid.ml  uuid.mli
test/: article.ml  dune  guard.ml  hacker.ml  init_db.sql  main.ml  notes.ml  ocaml_authorize.cmi  ocaml_authorize.cmo  ocaml_authorize.ml  ocauth.ml  ocauth_store.ml  post.ml  role.ml  role.mli  user.ml  user_store.ml
(+162 files in other folders)
