opam-version: "2.0"
build: [
  ["dune" "build"]
  ["dune" "build" "-p" name "-j" jobs]
]
install: [
  ["dune" "install"]
]
depends: [
  "lwt"
  "lwt.unix"
  "base64"
  "uuidm"
  "fmt"
  "fmt.tty"
  "logs"
  "logs.fmt"
  "ptime"
  "ptime.clock"
  "conformist"
  "containers"
  "yojson"
  "alcotest"
  "sqlite3"
]