opam-version: "2.0"
build: [
  ["dune" "build"]
  ["dune" "build" "-p" name "-j" jobs]
]
maintainer: "John Christopher McAlpine <christophermcalpine@gmail.com>"
authors: ["John Christopher McAlpine"]
homepage: "internal to UZH"
bug-reports: "internal to UZH"
synopsis: "Role-based access control for OCaml"
version: "0.0.1"
install: [
  ["dune" "install"]
]
depends: [
  "lwt"
  "base64"
  "uuidm"
  "fmt"
  "logs"
  "ptime"
  "conformist"
  "containers"
  "yojson"
  "alcotest"
  "alcotest-lwt"
  "sqlite3"
  "ppx_inline_test"
  "caqti-driver-mariadb"
  "ppx_deriving_yojson"
  "caqti-lwt"
  "lwt_ppx"
  "ppx_derivers"
]