(library
 (public_name guardian.backend)
 (inline_tests)
 (name Guardian_backend)
 (libraries
  base64
  caqti
  caqti-driver-mariadb
  caqti-lwt
  conformist
  containers
  fmt
  fmt.tty
  guardian
  logs
  logs.fmt
  lwt
  lwt.unix
  sqlite3
  uri
  uuidm
  yojson)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving_yojson
   ppx_deriving.eq
   ppx_deriving.make
   ppx_deriving.ord
   ppx_deriving.show
   ppx_inline_test)))
