(library
 (public_name guardian.backend)
 (inline_tests)
 (name Guardian_backend)
 (libraries caqti caqti-driver-mariadb caqti-lwt guardian lwt)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving_yojson
   ppx_deriving.eq
   ppx_deriving.make
   ppx_deriving.ord
   ppx_deriving.show
   ppx_inline_test)))
