(library
 (public_name guardian.backends)
 (inline_tests)
 (name guardian_backends)
 (libraries
  caqti
  caqti-lwt
  caqti-driver-mariadb
  uri
  lwt
  lwt.unix
  base64
  uuidm
  fmt
  fmt.tty
  logs
  logs.fmt
  conformist
  containers
  yojson
  sqlite3
  guardian)
 (preprocess
  (pps
   lwt_ppx
   ppx_inline_test
   ppx_deriving.make
   ppx_deriving.ord
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving_yojson)))
