(library
 (public_name ocaml_authorize)
 (inline_tests)
 (name ocaml_authorize)
 (wrapped true)
 (libraries
  lwt
  lwt.unix
  base64
  uuidm
  fmt
  fmt.tty
  logs
  logs.fmt
  ptime
  ptime.clock
  conformist
  containers
  yojson)
 (preprocess
  (pps
   ppx_inline_test
   ppx_deriving.make
   ppx_deriving.ord
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving_yojson
   lwt_ppx)))
