(library
 (public_name guardian)
 (inline_tests)
 (name guardian)
 (wrapped true)
 (libraries
  lwt
  lwt.unix
  base64
  uuidm
  fmt
  fmt.tty
  logs
  logs.fmt
  conformist
  containers
  yojson)
 (preprocess
  (pps
   ppx_inline_test
   ppx_deriving.make
   ppx_deriving.ord
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving_yojson
   lwt_ppx)))
