(library
 (public_name guardian)
 (inline_tests)
 (name guardian)
 (wrapped true)
 (libraries
  base64
  conformist
  containers
  fmt
  fmt.tty
  logs
  logs.fmt
  lwt
  lwt.unix
  uuidm
  yojson)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving_yojson
   ppx_deriving.eq
   ppx_deriving.make
   ppx_deriving.ord
   ppx_deriving.show
   ppx_inline_test)))
