(test
 (name main)
 (libraries alcotest alcotest-lwt guardian guardian.backend sqlite3)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving_yojson
   ppx_deriving.eq
   ppx_deriving.make
   ppx_deriving.ord
   ppx_deriving.show))
 (deps article.ml guard.ml hacker.ml main.ml user.ml)
 (action
  (progn
   (run %{test} -e))))
